[tool.poetry]
name = "ask-lib"
version = "2.0.1"
description = "Utility function to ask for user's confirmation in a CLI"
authors = ["CallMePixelMan"]
license = "MIT"
readme = "README.md"
packages = [{include = "ask_lib"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
sphinx = "^7.0.1"
furo = "^2023.5.20"
ruff = "^0.0.278"

[tool.pytest.ini_options]
addopts = "--cov=ask_lib --cov-report term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
